--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,24 @@
-altgraph==0.17.2
-asttokens==2.0.5
-autopep8==1.6.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-blinker==1.6.2
-cachetools==5.3.0
-certifi==2022.5.18.1
-cffi==1.15.1
-charset-normalizer==2.0.12
+beautifulsoup4==4.12.3
+blinker==1.7.0
+bs4==0.0.2
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
-colorama==0.4.4
-contourpy==1.0.7
-cryptography==37.0.4
-cycler==0.11.0
-debugpy==1.6.0
-decorator==5.1.1
-distlib==0.3.6
-entrypoints==0.4
-et-xmlfile==1.1.0
-executing==0.8.3
-filelock==3.8.2
+colorama==0.4.6
+cryptography==42.0.5
 Flask==3.0.2
-Flask-CKEditor==0.5.1
-Flask-WTF==1.1.1
-fonttools==4.39.4
-future==0.18.2
-google-api-core==2.11.0
-google-api-python-client==2.84.0
-google-auth==2.17.2
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.59.0
 gunicorn==23.0.0
-httplib2==0.22.0
-idna==3.3
-importlib-metadata==6.8.0
-importlib-resources==5.12.0
-ipykernel==6.13.0
-ipython==8.4.0
+idna==3.6
+importlib-metadata==7.0.1
 itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-jupyter-client==7.3.1
-jupyter-core==4.10.0
-kiwisolver==1.4.4
-MarkupSafe==2.1.3
-matplotlib==3.7.1
-matplotlib-inline==0.1.3
-mysql-connector-python==8.0.30
-nest-asyncio==1.5.5
-numpy==1.22.4
-openpyxl==3.0.10
-packaging==21.3
-pandas==1.4.2
-parso==0.8.3
-pefile==2022.5.30
-pickleshare==0.7.5
-Pillow==9.5.0
-pipenv==2022.11.30
-platformdirs==2.6.0
-prompt-toolkit==3.0.29
-protobuf==4.22.1
-psutil==5.9.1
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.8.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+packaging==24.1
 pycparser==2.21
-Pygments==2.12.0
-pyinstaller==5.12.0
-pyinstaller-hooks-contrib==2022.7
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-PyQtChart==5.15.6
-PyQtChart-Qt5==5.15.2
-pyqtgraph==0.13.3
-PySide6==6.5.0
-PySide6-Addons==6.5.0
-PySide6-Essentials==6.5.0
-python-dateutil==2.8.2
-python-dotenv==0.20.0
-pytz==2022.1
-pywin32==304
-pywin32-ctypes==0.2.0
-pyzmq==23.0.0
-qt5-applications==5.15.2.2.2
-qt5-tools==5.15.2.1.2
-requests==2.27.1
-rsa==4.9
-shiboken6==6.5.0
-six==1.16.0
-soupsieve==2.3.2.post1
-stack-data==0.2.0
-toml==0.10.2
-tornado==6.1
-traitlets==5.2.1.post0
-uritemplate==4.1.1
-urllib3==1.26.9
-virtualenv==20.17.1
-virtualenv-clone==0.5.7
-wcwidth==0.2.5
+python-dotenv==1.0.1
+requests==2.31.0
+soupsieve==2.5
+urllib3==2.2.1
 Werkzeug==3.0.1
-WTForms==3.0.1
-zipp==3.15.0
+zipp==3.17.0
