--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,42 +1,60 @@
 {
-    "name": "PassCraft",
-    "short_name": "PassCraft",
-    "start_url": "https://gerador-de-senhas-4qcw.onrender.com/",
-    "display": "standalone",
-    "description": "A description for your application",
-    "lang": "pt",
-    "dir": "auto",
-    "theme_color": "#513873",
-    "background_color": "#F8F8FA",
-    "orientation": "any",
-    "icons": [
-        {
-            "src": "static/components/icons/icone.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "static/components/icons/icone.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any"
-        }
-    ],
-    "screenshots": [
-        {
-            "src": "https://www.pwabuilder.com/assets/screenshots/screen1.png",
-            "sizes": "2880x1800",
-            "type": "image/png",
-            "description": "A screenshot of the home page"
-        }
-    ],
-    "prefer_related_applications": false,
-    "shortcuts": [
-        {
-            "name": "The name you would like to be displayed for your shortcut",
-            "url": "The url you would like to open when the user chooses this shortcut. This must be a URL local to your PWA. For example: If my start_url is /, this URL must be something like /shortcut",
-            "description": "A description of the functionality of this shortcut"
-        }
-    ]
+  "name": "PassCraft",
+  "short_name": "PassCraft",
+  "start_url": "https://gerador-de-senhas-4qcw.onrender.com/",
+  "display": "standalone",
+  "description": "A description for your application",
+  "lang": "pt",
+  "dir": "auto",
+  "theme_color": "#513873",
+  "background_color": "#F8F8FA",
+  "orientation": "any",
+  "icons": [
+    {
+      "src": "static/components/icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "static/components/icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "static/components/icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "static/components/icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "https://www.pwabuilder.com/assets/screenshots/screen1.png",
+      "sizes": "2880x1800",
+      "type": "image/png",
+      "description": "A screenshot of the home page"
+    }
+  ],
+  "related_applications": [
+    {
+      "platform": "windows",
+      "url": " The URL to your app in that app store"
+    }
+  ],
+  "prefer_related_applications": false,
+  "shortcuts": [
+    {
+      "name": "The name you would like to be displayed for your shortcut",
+      "url": "The url you would like to open when the user chooses this shortcut. This must be a URL local to your PWA. For example: If my start_url is /, this URL must be something like /shortcut",
+      "description": "A description of the functionality of this shortcut"
+    }
+  ]
 }
